syntax = "proto2";

import "arch/brother/brother.proto";
import "arch/ibm/ibm.proto";
//import "lib/common.proto";

message EncoderProto {
	oneof format {
		IBMOutputProto ibm = 3;
		BrotherOutputProto brother = 4;
	}
}
